# SmartClassroom

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  EXP-instruction.md  EXP.md  NetworkLog.md  PRD-instruction.md  PRD.md  README.md  admin.txt  alembic.ini  cookies.txt  docker-compose.yml  other.txt  pyproject.toml  register_moonlight_url.reg
.claude/: settings.local.json
.github/workflows/: ci.yml  docker.yml
agent/: README.md  agent.yaml  cookies.txt  pyproject.toml  user.txt
agent/smartclassroom_agent/: __init__.py  __main__.py  cli.py  client.py  config.py  heartbeat.py  logging.py
agent/smartclassroom_agent/collectors/: __init__.py  gpu.py  rtt.py  session.py  system.py
agent/smartclassroom_agent/service/: __init__.py  systemd.py  windows.py
agent/tests/: test_cli_doctor.py  test_cli_doctor.py.tmp.44252.d2a52b2d0536  test_client_auth.py  test_collectors_gpu.py  test_collectors_rtt.py  test_collectors_session.py  test_collectors_system.py  test_config.py  test_heartbeat_loop.py  test_service_helpers.py  test_smoke.py
broker/: Dockerfile
broker/alembic/: env.py
broker/app/: main.py
broker/tests/: conftest.py  test_agent_token_service.py  test_agents_heartbeat.py  test_alembic.py  test_auth_mock_flow.py  test_auth_provider_factory.py  test_calendar_endpoint.py  test_db_connection.py  test_health.py  test_host_events_sse.py  test_host_status_evaluator.py  test_host_status_metrics.py  test_host_status_monitor.py  test_hosts_admin.py  test_hosts_available.py  test_hosts_list.py  test_instant_reservation.py  test_internal_auth.py  test_logging.py  test_metrics.py  test_pairing.py  test_reservation_boundary.py  test_reservation_conflict.py  test_reservation_crud.py  test_reservation_permission.py  test_reservation_quota.py  test_revoke_all_sessions.py  test_token_consume.py  test_token_issue.py  test_token_verify.py
client-patches/moonlight-qt/: 0001-T13-add-connect-subcommand-and-CLI-parser.patch  0002-T13-add-moonlight-URL-handler-and-single-instance-fo.patch  0003-T13-ComputerManager-connect-entry-point-pending-toke.patch  0004-T13-register-moonlight-URL-protocol-in-WiX-installer.patch  0004-T13-register-moonlight-URL-scheme-in-macOS-Info.plis.patch  0005-T13-register-moonlight-URL-scheme-in-Linux-.desktop-.patch  0005-T13-register-moonlight-URL-scheme-in-macOS-Info.plis.patch  0006-T13-drop-setUrlHandler-call-Qt-6-signature-mismatch-.patch  0006-T13-register-moonlight-URL-scheme-in-Linux-.desktop-.patch  0007-T13-drop-setUrlHandler-call-Qt-6-signature-mismatch-.patch  0007-T13-forward-declare-scT13DispatchMoonlightUrl-for-re.patch  0008-T13-forward-declare-scT13DispatchMoonlightUrl-for-re.patch  0008-T14-add-ScBrokerClient-for-Broker-pairing-relay.patch  0009-T14-add-ScBrokerClient-for-Broker-pairing-relay.patch  0009-T14-automatic-connect-broker-URL-headless-pairing-au.patch  0010-T14-automatic-connect-broker-URL-headless-pairing-au.patch  0010-T14-decode-percent-encoded-broker-URL-param.patch  0011-T14-decode-percent-encoded-broker-URL-param.patch  BUILD.md  README.md  (+1 more)
docs/: auth.md
frontend/: .gitignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
(+101 files in other folders)
