[project]
name = "smartclassroom-broker"
version = "0.1.0"
description = "SmartClassroom Broker — reservation, auth, session orchestration for remote classroom PCs"
requires-python = ">=3.12,<3.13"
readme = "README.md"
dependencies = [
  "fastapi>=0.115,<0.116",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30",
  "alembic>=1.14",
  "structlog>=24.4",
  "prometheus-client>=0.21",
  "prometheus-fastapi-instrumentator>=7.0",
  "python-multipart>=0.0.12",
  "httpx>=0.28",
  "orjson>=3.10",
  "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6.0",
  "ruff>=0.7",
  "mypy>=1.13",
  "asgi-lifespan>=2.1",
  "testcontainers[postgres]>=4.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["broker"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["broker"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC", "S", "RUF"]
ignore = ["S101", "B008"]

[tool.ruff.lint.per-file-ignores]
"broker/tests/**" = ["S105", "S106"]
"broker/alembic/**" = ["E501"]
"broker/app/core/config.py" = ["S105"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["broker/alembic/versions/"]
explicit_package_bases = true
mypy_path = "."

[[tool.mypy.overrides]]
module = ["testcontainers.*", "prometheus_fastapi_instrumentator.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
testpaths = ["broker/tests"]
